specify compiler flags in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,8 @@
   <groupId>com.sourcegraph</groupId>
   <artifactId>java-7-app</artifactId>
   <version>1</version>
+  <properties>
+    <maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target>
+  </properties>
 </project>
